# mpython_esp32s3

./: .gitignore  .gitmodules  README.md  README_EN.md  README_tmp.html  export.sh
port/: CMakeLists.txt  README.md  add_adf_lib.md  esp32_common.cmake  makeimg.py  qstrdefsport.h  升级到micropython_v1.23.0.md  升级到micropython_v1.23.0_tmp.html
port/adf_components/audio_board/: CMakeLists.txt
port/adf_components/audio_hal/: CMakeLists.txt
port/adf_components/audio_stream/: CMakeLists.txt
port/boards/: make-pins.py  manifest.py  pins_prefix.c
port/boards/labplus_Ledong/: board.json  main.c  mpconfigboard.cmake  mpconfigboard.h  partitions-8MiB.csv  sdkconfig.board
port/boards/labplus_Ledong_pro/: bsp_audio_board.c  bsp_audio_board.h  mpconfigboard.cmake  mpconfigboard.h  partitions-8MiB.csv  sdkconfig.board  sdkconfig.spiram_sx  sdkconfig.usb
port/boards/labplus_Ledong_pro/audio/: CMakeLists.txt  board_def.h  board_pins_config.c
port/boards/labplus_Ledong_psram/: board.json  main.c  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board  sdkconfig.spiram
port/boards/labplus_Ledong_psram/audio/: CMakeLists.txt  board_def.h  board_pins_config.c
port/boards/labplus_Ledong_v2/: board.md  bsp_audio_board.c  main.c  mpconfigboard.cmake  mpconfigboard.h  partitions-16MiB.csv  sdkconfig.board  sdkconfig.spiram
port/boards/labplus_classroom_kit_nanjing/: main.c  mpconfigboard.cmake  mpconfigboard.h  partitions-8MiB.csv  sdkconfig.board  sdkconfig.spiram
port/boards/mpython/: mpconfigboard.cmake  mpconfigboard.h
port/boards/mpython_pro/: board.md  bsp_audio_board.c  mpconfigboard.cmake  mpconfigboard.h  partitions-16MiB.csv  sdkconfig.board  sdkconfig.spiram
port/builtins/: esp32_nvs.c  machine_pin.c  machine_pin_1.h  machine_touchpad.c  main.c  modasr.c  modaudio.c  modframebuf.c  modmusic.c  modmusic.h  modmusictunes.c  modrfid.c  modtts.c
port/builtins/mod_audio/: audio_player.c  audio_recorder.c  bak-vfs_stream.c  modaudio.c  vfs_stream.c
port/components/espressif__esp_codec_dev/: esp_codec_dev.c
port/drivers/audio/: audio.c  audio_board.c  es8388.c  http_stream.c  player.c  recorder.c  simple_file_decoder.c  stream_out.c  (+7 more)
port/main_esp32/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
port/main_esp32s3/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
port/modules/: CSK6011A.py  _dht.py  _ntptime.py  aes128.py  bluebit.py  espnow.py  inisetup.py  max30102.py  mfrc.py  neopixel.py  radio.py  servo.py  ssd1106.py
port/test/: main.py
port/usercmodule/: micropython.cmake
(+165 files in other folders)
